# dbt-factory

./: BACKLOG.md  CONTRIBUTE.md  README.md  airflow_learnings.md
.github/workflows/: publish.yml
dbtf/: factory_config.yml  pyproject.toml
dbtf/src/dbtf/: __about__.py  factory.py  factory_config.yml
dbtf/src/dbtf/dbt_project/: dbt_project.yml  factory_config.yml
dbtf/src/dbtf/dbt_project/seeds/: test_table_2.csv
dbtf/src/dbtf/dbt_project/templates/: aggregate.sql  filter.sql  formula.sql  join.sql  select.sql  sort.sql  union_all.sql  unique.sql
