[build-system]
requires = ["uv>=0.10.0"]
build-backend = "uv.build"

[project]
name = "dbtf"
version = "0.0.16"
description = ''
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [
  { name = "U.N. Owen", email = "void@some.where" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "click",
  "dbt-core>=1.0.9",
  "dbt-duckdb>=1.1.1",
  "pyyaml==6.0.0",
]

[project.urls]
Documentation = "https://github.com/unknown/dbtf#readme"
Issues = "https://github.com/unknown/dbtf/issues"
Source = "https://github.com/unknown/dbtf"

[project.scripts]
dbtf = "dbtf.cli:dbtf"

[tool.uv]
managed = true

[tool.uv.build]
copy-mode = "link"
artifacts = [
  "src/dbtf/dbt_project/seeds/*.csv",
  "src/dbtf/dbt_project/templates/*.sql",
  "src/dbtf/dbt_project/profiles.yml",
  "src/dbtf/dbt_project/dbt_project.yml",
  "src/dbtf/dbt_project/factory_config.yml",
]

[tool.black]
target-version = ["py37"]
line-length = 120
skip-string-normalization = true

[tool.ruff]
target-version = "py37"
line-length = 120
select = [
  "A", "ARG", "B", "C", "DTZ", "E", "EM", "F", "FBT", "I", "ICN", "ISC", "N", "PLC", "PLE", "PLR", "PLW", "Q", "RUF", "S", "T", "TID", "UP", "W", "YTT",
]
ignore = [
  "B027", "FBT003", "S105", "S106", "S107", "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
]
unfixable = ["F401"]

[tool.ruff.isort]
known-first-party = ["dbtf"]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.per-file-ignores]
"tests/**/*" = ["PLR2004", "S101", "TID252"]

[tool.coverage.run]
source_pkgs = ["dbtf", "tests"]
branch = true
parallel = true
omit = ["src/dbtf/__about__.py"]

[tool.coverage.paths]
dbtf = ["src/dbtf", "*/dbtf/src/dbtf"]
tests = ["tests", "*/dbtf/tests"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]

[dependency-groups]
dev = [
    "coverage[toml]>=6.5",
    "pytest>=7.4.4",
]
